@@ -7,17 +7,18 @@
 package com.spleefleague.core.game;
 
 import com.spleefleague.core.Core;
-import com.spleefleague.core.annotation.DBField;
-import com.spleefleague.core.annotation.DBLoad;
+import com.spleefleague.core.database.annotation.DBField;
+import com.spleefleague.core.database.annotation.DBLoad;
 import com.spleefleague.core.menu.InventoryMenuAPI;
 import com.spleefleague.core.menu.InventoryMenuItem;
 import com.spleefleague.core.player.CorePlayer;
-import com.spleefleague.core.util.Dimension;
-import com.spleefleague.core.util.Position;
-import com.spleefleague.core.util.database.DBEntity;
-import com.spleefleague.core.world.GameWorld;
+import com.spleefleague.core.util.variable.Dimension;
+import com.spleefleague.core.util.variable.Position;
+import com.spleefleague.core.database.variable.DBEntity;
+import com.spleefleague.core.world.game.GameWorld;
+
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -37,10 +38,16 @@ import org.bukkit.World;
 import org.bukkit.inventory.ItemStack;
 
 /**
+ * Arena is a set of variables loaded from a specified Database
+ * Arena is Used in Battle
+ *
  * @author NickM13
  */
 public class Arena extends DBEntity {
-    
+
+    /**
+     * ARENAS contains every loaded arena
+     */
     private static final Map<ArenaMode, Map<String, Arena>> ARENAS = new HashMap<>();
     
     @DBField
@@ -77,57 +84,85 @@ public class Arena extends DBEntity {
     // projectiles to interact with blocks
     protected int ongoingMatches = 0;
     protected int ongoingQueues = 0;
-    
-    @DBLoad(fieldname="border")
-    protected void loadBorder(Document doc) {
+
+    @DBLoad(fieldName ="border")
+    private void loadBorder(Document doc) {
         Dimension dim = new Dimension();
         dim.load(doc);
         border.add(dim);
     }
-    @DBLoad(fieldname="border")
-    protected void loadBorders(List<Document> docs) {
+    @DBLoad(fieldName ="border")
+    private void loadBorders(List<Document> docs) {
         docs.forEach(doc -> {
             Dimension dim = new Dimension();
             dim.load(doc);
             border.add(dim);
         });
     }
-    
+
+    /**
+     * Get the name of the creator of this arena
+     *
+     * @return Arena Creator
+     */
     public String getCreator() {
         return creator;
     }
-    @DBLoad(fieldname="name")
-    protected void setName(String displayName) {
+    @DBLoad(fieldName ="name")
+    private void setName(String displayName) {
         this.displayName = displayName;
         name = displayName.replaceAll("\\s", "");
     }
+
+    /**
+     * Get the name of an arena used for indexing (no spaces)
+     *
+     * @return Arena Name
+     */
     public String getName() {
         return name;
     }
+
+    /**
+     * Get the displayName of an arena (includes spaces)
+     *
+     * @return Arena Display Name
+     */
     public String getDisplayName() {
         return displayName;
     }
+
+    /**
+     * Returns the formatted descriptoin of an arena, including
+     * number of players in queue and number of ongoing matches
+     */
     public String getDescription() {
         String desc = description;
         desc += "\n" + "Queued: " + getOngoingQueues();
         desc += "\n" + "Matches: " + getOngoingMatches();
         return desc;
     }
-    
+
+    /**
+     * Get the required number of players per team
+     *
+     * @return Team Size
+     */
     public int getTeamSize() {
         return teamSize;
     }
-    
+
+    /**
+     * Get the borders of this arena
+     *
+     * @return Dimension List
+     */
     public List<Dimension> getBorders() {
         return border;
     }
-    
-    public int getDifficulty() {
-        return 0;
-    }
-    
-    @DBLoad(fieldname="world")
-    protected void setWorld(String worldName) {
+
+    @DBLoad(fieldName ="world")
+    private void setWorld(String worldName) {
         if (worldName == null || worldName.equals("")) {
             world = Core.DEFAULT_WORLD;
         } else {
@@ -141,32 +176,72 @@ public class Arena extends DBEntity {
         }
         if (spectatorSpawn != null) spectatorSpawn.setWorld(world);
     }
-    @DBLoad(fieldname="spectatorSpawn")
-    protected void setSpectatorSpawn(Position pos) {
+
+    @DBLoad(fieldName ="spectatorSpawn")
+    private void setSpectatorSpawn(Position pos) {
         spectatorSpawn = pos.asLocation(world != null ? world : Core.DEFAULT_WORLD);
     }
-    
+
+    /**
+     * Whether spectators should be teleported if they
+     * leave the spectator boundaries
+     *
+     * @return Tp Back Spectators?
+     */
     public boolean hasTpBackSpectators() {
         return tpBackSpectators;
     }
+
+    /**
+     * Get the location Spectators are teleported to
+     *
+     * @return Spectator Spawn
+     */
     public Location getSpectatorSpawn() {
         return spectatorSpawn;
     }
-    
+
+    /**
+     * Set the mode of an arena
+     *
+     * @param mode Mode Name
+     */
     protected void setMode(String mode) {
         this.mode = ArenaMode.getArenaMode(mode);
     }
+
+    /**
+     * Get the mode of an arena
+     *
+     * @return Arena Mode
+     */
     public ArenaMode getMode() {
         return mode;
     }
-    
+
+    /**
+     * Set arena's pause state
+     *
+     * @param state Paused
+     */
     public void setPaused(boolean state) {
         paused = state;
     }
-    public boolean isPaused() {
+
+    /**
+     * Whether arena's queues are paused or not
+     *
+     * @return Paused
+     */
+    private boolean isPaused() {
         return paused;
     }
-    
+
+    /**
+     * Get the world that this arena is played in
+     *
+     * @return World
+     */
     public World getWorld() {
         if (world == null) {
             return spawns.get(0).getWorld();
@@ -174,48 +249,95 @@ public class Arena extends DBEntity {
             return world;
         }
     }
-    
+
+    /**
+     * Add ongoing match
+     */
     public void incrementMatches() {
         ongoingMatches++;
     }
+
+    /**
+     * Subtract ongoing match
+     */
     public void decrementMatches() {
         ongoingMatches--;
     }
+
+    /**
+     * @return Ongoing Matches
+     */
     public int getOngoingMatches() {
         return ongoingMatches;
     }
+
+    /**
+     * Returns whether arena can be used, for disabling arenas
+     * during maintenance times
+     *
+     * @return Arena Availability
+     */
     public boolean isAvailable() {
-        return true;
+        return !isPaused();
     }
-    
+
+    /**
+     * Add queued player
+     */
     public void incrementQueues() {
         ongoingQueues++;
     }
+
+    /**
+     * Subtract queued player
+     */
     public void decrementQueues() {
         ongoingQueues--;
     }
+
+    /**
+     * Get total number of queued players for this arena
+     *
+     * @return Queued Players
+     */
     public int getOngoingQueues() {
         return ongoingQueues;
     }
-    
+
+    /**
+     * Create a GameWorld for this arena to be build in
+     *
+     * @return New GameWorld
+     */
     public GameWorld createGameWorld() {
         return new GameWorld(getWorld());
     }
 
+    /**
+     * Possible spawn locations for battlers
+     *
+     * @return Spawn List
+     */
     public List<Location> getSpawns() {
         return spawns;
     }
-    
-    @DBLoad(fieldname="spawns")
-    protected void loadSpawns(List<List> spawnList) {
-        for (List spawn : spawnList) {
+
+    @DBLoad(fieldName ="spawns")
+    private void loadSpawns(List<List<?>> spawnList) {
+        for (List<?> spawn : spawnList) {
             Position pos = new Position();
             pos.load(spawn);
             if (world != null) spawns.add(pos.asLocation(world));
             else spawns.add(pos.asLocation(Core.DEFAULT_WORLD));
         }
     }
-    
+
+    /**
+     * Create a menu item for this arena
+     *
+     * @param queueAction Click Action
+     * @return Inventory Menu Item
+     */
     public InventoryMenuItem createMenu(Consumer<CorePlayer> queueAction) {
         return InventoryMenuAPI.createItem()
                 .setName(getDisplayName())
@@ -223,44 +345,76 @@ public class Arena extends DBEntity {
                 .setDisplayItem(cp -> { return new ItemStack(Material.FILLED_MAP); })
                 .setAction(queueAction);
     }
-    
+
+    /**
+     * Get the location for players after a game ends
+     * used if they have Arena PostWarp enabled
+     *
+     * TODO: Right now this is just spectatorSpawn, should it be changed?
+     *
+     * @return Post Game Location
+     */
     public Location getPostGameWarp() {
         return spectatorSpawn;
     }
-    
+
+    /**
+     * Get all arenas for a specific mode that are available
+     *
+     * @param mode Arena Mode
+     * @return Available Arenas
+     */
     public static Map<String, Arena> getUnpausedArenas(ArenaMode mode) {
         if (!ARENAS.containsKey(mode))
-            return Collections.EMPTY_MAP;
+            return new HashMap<>();
         Map<String, Arena> arenas = new TreeMap<>();
         
         for (Map.Entry<String, Arena> arena : ARENAS.get(mode).entrySet()) {
-            if (!arena.getValue().isPaused()) {
+            if (arena.getValue().isAvailable()) {
                 arenas.put(arena.getKey(), arena.getValue());
             }
         }
         
         return arenas;
     }
-    
+
+    /**
+     * Get all arenas for a specific mode
+     *
+     * @param mode Arena Mode
+     * @return Arenas
+     */
     public static Map<String, Arena> getArenas(ArenaMode mode) {
         if (!ARENAS.containsKey(mode)) 
-            return Collections.EMPTY_MAP;
+            return new HashMap<>();
         return ARENAS.get(mode);
     }
-    
+
+    /**
+     * Get a set of names of all available arenas for a mode
+     *
+     * @param mode Arena Mode
+     * @return String Set
+     */
     public static Set<String> getArenaNames(ArenaMode mode) {
         if (!ARENAS.containsKey(mode)) {
-            return Collections.EMPTY_SET;
+            return new HashSet<>();
         }
         Set<String> arenas = new HashSet<>();
         for (Map.Entry<String, Arena> arena : ARENAS.get(mode).entrySet()) {
-            if (!arena.getValue().isPaused()) {
+            if (arena.getValue().isAvailable()) {
                 arenas.add(arena.getKey());
             }
         }
         return arenas;
     }
 
+    /**
+     * Returns a random arena of a mode
+     *
+     * @param mode Arena Mode
+     * @return Arena
+     */
     public static Arena getRandomArena(ArenaMode mode) {
         Map<String, Arena> arenas = getUnpausedArenas(mode);
         if (arenas.isEmpty()) return null;
@@ -268,7 +422,14 @@ public class Arena extends DBEntity {
         Object[] values = arenas.values().toArray();
         return (Arena)(values[generator.nextInt(values.length)]);
     }
-    
+
+    /**
+     * Returns an arena by name and mode
+     *
+     * @param name Arena Name
+     * @param mode Arena Mode
+     * @return Arena
+     */
     public static Arena getByName(String name, ArenaMode mode) {
         if (name == null) return null;
         Map<String, Arena> arenas = ARENAS.get(mode);
@@ -281,20 +442,34 @@ public class Arena extends DBEntity {
         }
         return null;
     }
-    
+
+    /**
+     * Load arena into ARENAS list from document
+     *
+     * @param arenaDoc Document
+     * @param mode Arena Mode
+     * @return Success
+     */
     protected static boolean loadArena(Document arenaDoc, ArenaMode mode) {
         if (!ARENAS.containsKey(mode)) ARENAS.put(mode, new TreeMap<>());
         try {
-            Arena arena = mode.getArenaClass().newInstance();
+            Arena arena = mode.getArenaClass().getDeclaredConstructor().newInstance();
             arena.load(arenaDoc);
             ARENAS.get(mode).put(arena.getName().toLowerCase(), arena);
             return true;
-        } catch (InstantiationException | IllegalAccessException ex) {
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException ex) {
             Logger.getLogger(Arena.class.getName()).log(Level.SEVERE, null, ex);
         }
         return false;
     }
-    
+
+    /**
+     * Load arenas into ARENAS list from an iterator of docs
+     *
+     * @param itArena Document Iterator
+     * @param mode Arena Mode
+     * @return Num of successes
+     */
     protected static int loadArenas(Iterator<Document> itArena, ArenaMode mode) {
         if (mode == null || mode.getArenaClass() == null) return 0;
         int successCounter = 0;
@@ -302,30 +477,37 @@ public class Arena extends DBEntity {
         while (itArena.hasNext()) {
             Document adoc = itArena.next();
             try {
-                Arena arena = mode.getArenaClass().newInstance();
+                Arena arena = mode.getArenaClass().getDeclaredConstructor().newInstance();
                 arena.load(adoc);
                 arena.getMode().addRequiredTeamSize(arena.getTeamSize());
                 ARENAS.get(mode).put(arena.getName().toLowerCase(), arena);
                 successCounter++;
-            } catch (InstantiationException | IllegalAccessException ex) {
+            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException ex) {
                 Logger.getLogger(Arena.class.getName()).log(Level.SEVERE, null, ex);
             }
         }
         return successCounter;
     }
-    
+
+    /**
+     * Load arenas into ARENAS list from a list of docs
+     *
+     * @param arenaDocs List of Documents
+     * @param mode Arena Mode
+     * @return Num of successes
+     */
     protected static int loadArenas(List<Document> arenaDocs, ArenaMode mode) {
         if (mode == null || mode.getArenaClass() == null) return 0;
         int successCounter = 0;
         if (!ARENAS.containsKey(mode)) ARENAS.put(mode, new TreeMap<>());
         for (Document adoc : arenaDocs) {
             try {
-                Arena arena = mode.getArenaClass().newInstance();
+                Arena arena = mode.getArenaClass().getDeclaredConstructor().newInstance();
                 arena.load(adoc);
                 arena.getMode().addRequiredTeamSize(arena.getTeamSize());
                 ARENAS.get(mode).put(arena.getName().toLowerCase(), arena);
                 successCounter++;
-            } catch (InstantiationException | IllegalAccessException ex) {
+            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException ex) {
                 Logger.getLogger(Arena.class.getName()).log(Level.SEVERE, null, ex);
                 ex.printStackTrace();
             }
